[package]
name = "aheui-core"
version = "0.1.0"
authors = ["SeongChan Lee <foriequal@gmail.com>"]
edition = "2018"

[lib]

[features]
render = ["proc-macro2", "quote"]
parse = []
derive_debug = []

[dependencies]
proc-macro2 = { version = "^1.0.5", optional = true }
quote = { version = "^1.0.2", optional = true }