[package]
name = "aheui-macro"
version = "0.1.0"
authors = ["SeongChan Lee <foriequal@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0.5"
quote = "^1.0.2"

[dependencies.aheui-core]
path = "../aheui-core"
features = ["render", "parse"]

[dependencies.syn]
version = "^1.0.0"
features = ["full", "extra-traits", "derive"]